--- a/taco-cloud/src/main/resources/templates/orderForm.html
+++ b/taco-cloud/src/main/resources/templates/orderForm.html
@@ -13,52 +13,51 @@
         <!-- this redirect to /design -->
         <a th:href="@{/design}" id="another">Design another taco</a><br>
 
-        <!-- here, we call methods to validate data, and following msg shown when this method
-        returns true -->
-        <!-- <div th:if="${#fields.hasErros()}">
-            <span class="validationError">
-                Please correct the problem below and resumbit.
-            </span>
-        </div> -->
-
         <h3>Deliver my taco masterpieces to ...</h3>
         <label for="name">Name:</label>
         <!-- set to order's "name" field -->
         <input type="text" th:field="*{name}">
+        <!-- displaying errors, it first check whether field has erros, which is the th:field declared above. -->
+        <!-- if there is error catched, then use th:errors to catch error of this field -->
+        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name has errors</span>
         <br>
 
         <label for="street">Street Address:</label>
         <input type="text" th:field="*{street}">
+        <span th:if="${#fields.hasErrors('street')}" th:errors="*{street}">Street has errors</span>
         <br>
 
         <label for="city">City:</label>
         <input type="text" th:field="*{city}">
+        <span th:if="${#fields.hasErrors('city')}" th:errors="*{city}">City has errors</span>
         <br>
 
         <label for="state">State:</label>
         <input type="text" th:field="*{state}">
+        <span th:if="${#fields.hasErrors('state')}" th:errors="*{state}">State has errors</span>
         <br>
 
         <label for="zip">Zip code:</label>
         <input type="text" th:field="*{zip}">
+        <span th:if="${#fields.hasErrors('zip')}" th:errors="*{zip}">Zip has errors</span>
         <br>
 
         <h3>Here's how I'll pay...</h3>
-        <label for="ccNumber">Credit Card #:</label>
+        <label for="ccNumber">Credit Card:</label>
         <input type="text" th:field="*{ccNumber}">
+        <span th:if="${#fields.hasErrors('ccNumber')}" th:errors="*{ccNumber}">Zip has errors</span>
         <br>
 
         <label for="ccExpiration">Expiration:</label>
         <input type="text" th:field="*{ccExpiration}">
+        <span th:if="${#fields.hasErrors('ccExpiration')}" th:errors="*{ccExpiration}">Zip has errors</span>
         <br>
 
         <label for="ccCVV">CVV:</label>
         <input type="text" th:field="*{ccCVV}">
+        <span th:if="${#fields.hasErrors('ccCVV')}" th:errors="*{ccCVV}">CVV code has errors</span>
         <br>
-
         <input type="submit" value="Submit Order">
     </form>
 </body>
-
-
 </html>
