--- a/taco-cloud/src/main/resources/templates/orderForm.html
+++ b/taco-cloud/src/main/resources/templates/orderForm.html
@@ -59,5 +59,8 @@
         <br>
         <input type="submit" value="Submit Order">
     </form>
+    <form method="POST" th:action="@{/logout}">
+        <input type="submit" value="Logout" >
+    </form>
 </body>
 </html>
